# tasktree-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPENSPEC.md  PRD.md  README.md  ROADMAP.md  mise.toml  pyproject.toml
.claude/skills/textual-tui/: SKILL.md
.claude/skills/textual-tui/assets/: README.md  dashboard_app.py  data_viewer.py  todo_app.py  worker_demo.py
.claude/skills/textual-tui/references/: layouts.md  official-guides-index.md  styling.md  widgets.md
.github/templates/: CHANGELOG.md.j2
.github/workflows/: ci.yml  release.yml
docs/: claude-code-integration-spec.md  configuration.md  installation.md  troubleshooting.md  user-guide.md
scripts/: bump_version.py
specs/: README.md  SPEC-001-task-management.md
tasktree/: __init__.py  app.py
tasktree/services/: __init__.py  config.py  git_ops.py  models.py  task_manager.py
tasktree/styles/: app.tcss
tasktree/themes/: __init__.py
tasktree/widgets/: __init__.py  create_modal.py  messages_panel.py  setup_modal.py  status_panel.py  task_list.py  worktree_list.py
tasktree_manager/: __init__.py  _version.py  app.py  cli.py  commands.py  themes.py
tasktree_manager/services/: __init__.py  claude_hooks.py  config.py  git_ops.py  models.py  task_manager.py
tasktree_manager/widgets/: __init__.py  app_header.py  create_modal.py  messages_panel.py  setup_modal.py  status_panel.py  task_list.py  worktree_list.py
tests/: __init__.py  conftest.py  test_app.py  test_claude_hooks.py  test_cli.py  test_commands.py  test_config.py  test_git_ops.py  test_integration_git.py  test_memory.py  test_messages_panel.py  test_modals.py  test_setup_modal.py  test_status_panel.py  test_task_manager.py
