[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tasktree-manager"
dynamic = ["version"]
description = "TUI application for managing worktree-based tasks"
requires-python = ">=3.10"
dependencies = [
    "textual>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "textual-dev>=1.8.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
tasktree-manager = "tasktree_manager.app:main"

[tool.hatch.build.targets.wheel]
packages = ["tasktree_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "memory: marks memory-intensive tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["tasktree_manager"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 60
show_missing = true
skip_covered = false

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "tasktree_manager/_version.py"

# Semantic Release Configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:tool.semantic_release.version"]
version = "2.0.1"
tag_format = "v{version}"
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
build_command = "pip install build && python -m build"

[tool.semantic_release.changelog]
template_dir = ".github/templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
